force-app/main/default/objects/Audit_Step__c/Audit_Step__c.object-meta.xml
<CustomObject>
    <description>it is a audit app related object</description>
    <label>Audit Step</label>
    <nameField>
        <label>Audit Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>