force-app/main/default/objects/Audit_Step__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>date of completion fo audit app</description>
    <label>DueDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>