force-app/main/default/objects/Audit_Step__c/fields/IsDefaultStep__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultStep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDefaultStep</label>
    <type>Checkbox</type>
</CustomField>