force-app/main/default/objects/Audit_Step__c/fields/OrderIndex__c.field-meta.xml
<CustomField>
    <fullName>OrderIndex__c</fullName>
    <complianceGroup>[]</complianceGroup>
    <description>asdsadsadsad</description>
    <inlineHelpText>asdasdsadsad</inlineHelpText>
    <label>OrderIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>