force-app/main/default/objects/Audit_Step__c/fields/ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewDate__c</fullName>
    <label>ReviewDate</label>
    <type>Date</type>
</CustomField>